# travel_data

./: .gitignore  FORMATS.md  MAP.md  Makefile  README-heatmap-res.md  README-heatmap.md  README.md  TODO.md  convert.py  eval.py  gravity.py  gravity_model.py  hist_plot.py  location.py  log.py  main.py  map.py  matrix-Balltree.ipynb  matrix-Original.ipynb  matrix.ipynb  optim_count_total_trips.py  optim_new_training.py  optim_sum_trips.py  preprocess.py  pyproject.toml  run.py  train.py  trip.py  visualize.py
celltower_data/: README.md  heatmap.py  process.ipynb  visualize.ipynb
census_data/: README.md  england+wales_2023.csv  geodata.ipynb  uk_2022.csv  uk_boundaries_2024.csv  uk_boundaries_merged_2024.csv
doc/: gravity.md  gravity_model.md  location.md  log.md  main.md  overview.md  trip.md
example_data/: loc_data.csv
gravity_model/: README.md  ars.py  distance.py  gravity.py  heatmap_res.py  location.py  training.py  trip.py  visualize.py  visualize_single.py
gravity_model/models/: README.md  __init__.py  basic.py  double_power.py  doubleexpo.py  doublepower.py  expo.py  expower.py  loader.py  power.py  split.py  triple_power.py  tripleexpo.py  triplepower.py
gravity_model/random_search/: __init__.py  double.py  single.py  triple.py
gravity_model/search/: README.md  __init__.py  generic.py  genetic_search.py  grid_search.py  nelder_mead.py  random_search.py
