[project]
name = "modeling-human-long-range-travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "geopandas>=1.0.1",
    "geoplot>=0.5.1",
    "geopy>=2.4.1",
    "jsonpickle>=4.0.5",
    "kaleido>=1.0.0",
    "notebook>=7.4.1",
    "plotly>=6.3.0",
    "polars>=1.29.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
